@@ -2,6 +2,7 @@ Revision history for {{$dist->name}}
 
 4.17_01 ????-??-?? Duncan Ferguson <duncan_ferguson@user.sf.net>
 - Swap the hostname lookup macro from DNS to using the system hostname (Github issue #158)
+- Update the perl versions to test in Travis-CI
 
 4.16 2020-06-20 Duncan Ferguson <duncan_ferguson@user.sf.net>
 - Further fix for 'resolve_names' error when adding hosts via the UI
